multi: add remote signing validation PoC
